--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -386,3 +386,39 @@ textarea {
     display: none;
 }
 
+
+
+/* likert style*/
+.likert {
+    padding-top: 50px;
+    list-style:none;
+    min-width: 30em;
+    width:100%;
+    margin:0;
+    /*padding:0 0 35px;*/
+    border-bottom:2px solid #efefef;
+}
+.likert:last-of-type {border-bottom:0;}
+.likert:before {
+    content: '';
+    position:relative;
+    top:11px;
+    left:11%;
+    display:block;
+    background-color:#efefef;
+    height:4px;
+    width:78%;
+}
+.likert li {
+    display:inline-block;
+    width:19%;
+    text-align:center;
+    vertical-align: top;
+}
+.likert li input[type=radio] {
+    display:block;
+    position:relative;
+    top:0;
+    left:50%;
+    margin-left:-6px;
+}
