--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -10,6 +10,7 @@
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/index.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/index.js}"></script>
+    <script type="text/javascript" th:src="@{/js/createform-sidebar.js}"></script>
     <script type="text/javascript" th:src="@{/js/axios.js}"></script>
     <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
     <link rel="icon" type="image/png" href="/img/favicon.png">
