--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,14 +1,12 @@
 body{
     margin-top: 10px;
-    background-image: url("../img/night_bg.jpg");
-    background-size: 100% 130%;
+    background: linear-gradient(to bottom, #5ee7df 0%, #b490ca 100%);
+    background-size: 100% 300%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
-    background-color: rgb(7, 3, 2);
-    /*background-color: rgba(221, 224, 227, 0.6);*/
+    background-color: #b490ca;
 }
-
 .bottom-10{
     bottom: 10%;
     !important;
@@ -29,7 +27,7 @@ body{
 }
 .navbar-brand{
     font-size: 22px;
-    color: white !important;
+    color: #ffc720;
 }
 .navbar .navbar-nav li a{
     font-size: 16px;
@@ -84,7 +82,7 @@ body{
 .navbar-animate{
     padding: 0 10px 0 0;
     transition: all ease 0.4s;
-    background-color: #1e2125;
+    background-color: #86b7fe;
     /*background: transparent;*/
 }
 .navbar:hover{
