--- a/src/main/resources/templates/pages/research/readform.html
+++ b/src/main/resources/templates/pages/research/readform.html
@@ -9,79 +9,299 @@
 </head>
 <body>
 <div layout:fragment="content">
-<script th:inline="javascript">
-    /*<![CDATA[*/
-    const rsiList = [[${rsiList}]];
-    const userName = [[${username}]];
-    const userRole = [[${userRoles}]];
-    const research = [[${research}]];
-    console.log(rsiList);
-    console.log(userName);
-    console.log(userRole);
-    console.log(research);
-    /*]]>*/
-</script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        const rsiList = [[${rsiList}]];
+        const userName = [[${username}]];
+        const userRole = [[${userRoles}]];
+        const research = [[${research}]];
+        console.log(rsiList);
+        console.log(userName);
+        console.log(userRole);
+        console.log(research);
+        /*]]>*/
+        let answerList = [
+            {
+                rs_seq: research.rs_seq,
+                username: userName
+            },
+            {
+                type: "0",
+                no: "1",
+                answerList: []
+            }
+        ];
+    </script>
 
-        <div class="main-content-container hide">
+    <div class="main-content-container hide d-flex justify-content-center mt-5">
+        <div class="answer-content-header d-flex justify-content-start">
             <span class="text-danger">
                 설문 조사
             </span>
             <span>
-                <span th:text="${rsiList.get(0).rsi_no}"></span>
+                <span id="currentQNum">0</span>
                 <span>/</span>
                 <span th:text="${research.rs_cnt}"></span>
             </span>
-            <div class="main-content d-flex p-0 m-0 pt-3">
-                <!--                hide scroll bar by cover another div-->
-                <div class="d-flex col">
-                    <div id="question-number" class="col-1 d-flex justify-content-end me-3">
-                        <span style="display: none">0</span>
+        </div>
+        <div class="main-content answer-content-body">
+            <!--                hide scroll bar by cover another div-->
 
-                        <span class="text-white">설문 내용</span>
-                        <span>-></span>
-                    </div>
+        </div>
 
-                    <div class="col-11 pe-5">
-                        <div th:text="${research.rs_title}"></div>
-                        <div th:text="${research.rs_desc}"></div>
+<!--        <div class="main-content answer-content before">-->
 
-                        <div class="d-flex col">
-                            <div class="col-6">
-                                <div class="col">
-                                    <div class="col-4">
-                                        <span class="text-white">시작일</span>
-                                    </div>
-                                    <div class="col-8">
-                                        <span type="date" th:text="${research.rs_start_date}" readonly>
-                                    </span>
+<!--        </div>-->
+
+<!--        <div class="main-content answer-content after">-->
+
+<!--        </div>-->
+
+        <div class="answer-content-footer row-cols-3 d-flex justify-content-between w-100 m-0 px-2">
+            <button class="btn btn-toolbar col-auto" onclick="handleAnswerPage('<')"><<</button>
+            <button class="btn btn-toolbar col-auto" onclick="handleAnswerPage('>')">>></button>
+        </div>
+
+    </div>
+<!--    scroll wheel event-->
+    <script>
+        let isScrolling = false;
+
+        window.addEventListener('wheel', function(event) {
+            if (isScrolling) return;
+            const deltaY = event.deltaY;
+            if (deltaY < 0) {
+                // console.log("한 페이지 이전");
+                handleAnswerPage('<');
+            } else if (deltaY > 0) {
+                // console.log("한 페이지 이후");
+                handleAnswerPage('>');
+            }
+            isScrolling = true;
+            setTimeout(function() {
+                isScrolling = false;
+            }, 800);
+        });
+    </script>
+
+    <script>
+        let currentRsiNo = 0;
+
+        document.querySelector(".answer-content-body").innerHTML = createIntroHTML();
+        function handleAnswerPage(direction) {
+            let answerContent = document.querySelector(".answer-content-body");
+            if (direction === '>') {
+                if (currentRsiNo < rsiList.length) {
+                    currentRsiNo+=1;
+                }
+            } else if (direction === '<') {
+                if (currentRsiNo > 0) {
+                    currentRsiNo-=1;
+                }
+            }
+            setCurrentQNum();
+            answerContent.innerHTML = createAnswerContentHTMLByPage(currentRsiNo);
+        }
+
+        function setCurrentQNum() {
+            document.querySelector("#currentQNum").innerText = currentRsiNo;
+        }
+
+        function createIntroHTML() {
+            return `
+               <div class="d-flex col">
+                <div id="question-number" class="col-2 d-flex justify-content-end me-3">
+                    <span style="display: none">0</span>
+                    <span class="text-white">설문 내용</span>
+                    <span>-></span>
+                </div>
+
+                <div class="col-10 pe-5">
+                    <div>${research.rs_title}</div>
+                    <div>${research.rs_desc}</div>
+
+                    <div class="d-flex row">
+                        <div class="row-cols-6">
+                            <div class="col w-75">
+                                <div class="col-4">
+                                    <span class="text-white">시작일</span>
+                                </div>
+                                <div class="col-8">
+                                    <span>${research.rs_start_date}</span>
                                 </div>
                             </div>
-                            <div class="col-6">
-                                <div class="col">
-                                    <div class="col-4">
-                                        <span class="text-white">종료일</span>
-                                    </div>
-                                    <div class="col-8">
-                                        <span type="date" th:text="${research.rs_end_date}" readonly>
-                                    </span>
+                            <div class="col w-75">
+                                <div class="col-4">
+                                    <span class="text-white">종료일</span>
+                                </div>
+                                <div class="col-8">
+                                    <span>${research.rs_end_date}</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="main-content-footer">
-                        <button> 이전</button>
-                    <button> 다음</button>
+            </div>
+                `;
+        }
+
+        function createType0HTML(index) {
+            let choices="";
+                // rsi_type0_1
+            if(rsiList[index].rsi_type0_1 !== null)
+                choices += `
+                    <div class="row-cols-6 mt-5">
+                        <input type="radio" name="choice" value="1">
+                        <span>${rsiList[index].rsi_type0_1}</span>
+                    </div>
+                `
+            if(rsiList[index].rsi_type0_2 !== null)
+                choices += `
+                    <div class="row-cols-6 mt-5">
+                        <input type="radio" name="choice" value="2">
+                        <span>${rsiList[index].rsi_type0_2}</span>
+                    </div>
+                `
+            if(rsiList[index].rsi_type0_3 !== null)
+                choices += `
+                    <div class="row-cols-6 mt-5">
+                        <input type="radio" name="choice" value="3">
+                        <span>${rsiList[index].rsi_type0_3}</span>
+                    </div>
+                `
+            if(rsiList[index].rsi_type0_4 !== null)
+                choices += `
+                    <div class="row-cols-6 mt-5">
+                        <input type="radio" name="choice" value="4">
+                        <span>${rsiList[index].rsi_type0_4}</span>
+                    </div>
+                `
+            if(rsiList[index].rsi_type0_5 !== null)
+                choices += `
+                    <div class="row-cols-6 mt-5">
+                        <input type="radio" name="choice" value="5">
+                        <span>${rsiList[index].rsi_type0_5}</span>
+                    </div>
+                `
+
+
+
+            return `
+               <div class="d-flex col">
+                <div id="question-number" class="col-2 d-flex justify-content-end me-3">
+                    <span style="display: none">${rsiList[index].rsi_type}</span>
+
+                    <span class="text-white">설문 내용</span>
+                    <span>-></span>
+                </div>
+
+                <div class="col-10 pe-5">
+                    <span>Q${currentRsiNo}</span>
+                    <span>${rsiList[index].rsi_question}</span>
+
+                    <div class="d-flex row">
+
+                `
+                +choices+
+                `
+                    </div>
                 </div>
             </div>
+                `
+        }
 
+        function createType1HTML(index) {
+            return `
+               <div class="d-flex col">
+                <div id="question-number" class="col-2 d-flex justify-content-end me-3">
+                    <span style="display: none">${rsiList[index].rsi_type}</span>
 
-        </div>
+                    <span class="text-white">설문 내용</span>
+                    <span>-></span>
+                </div>
 
+                <div class="col-10 pe-5">
+                    <span>Q${currentRsiNo}</span>
+                    <span>${rsiList[index].rsi_question}</span>
 
+                    <div class="d-flex row">
+                        type1
+                    </div>
+                </div>
+            </div>
+                `
+        }
+
+        function createType2HTML(index) {
+            return `
+               <div class="d-flex col">
+                <div id="question-number" class="col-2 d-flex justify-content-end me-3">
+                    <span style="display: none">${rsiList[index].rsi_type}</span>
+                    <span class="text-white">설문 내용</span>
+                    <span>-></span>
+                </div>
+
+                <div class="col-10 pe-5">
+                    <span>Q${currentRsiNo}</span>
+                    <span>${rsiList[index].rsi_question}</span>
+
+                    <div class="d-flex row">
+                        type2
+                    </div>
+                </div>
+            </div>
+                `
+        }
+
+        function createType3HTML(index) {
+            return undefined;
+        }
+
+        function createType4HTML(index) {
+            return undefined;
+        }
+
+        function createType5HTML(index) {
+            return undefined;
+        }
+
+        function createAnswerContentHTMLByPage(pageNum) {
+            let answerContent;
+
+            if(pageNum === 0){
+                return createIntroHTML();
+            }
+
+            let index = pageNum-1;
+            let type = rsiList[index].rsi_type;
+
+            switch (type) {
+                case "0":
+                    answerContent=createType0HTML(index);
+                    break;
+                case "1":
+                    answerContent=createType1HTML(index);
+                    break;
+                case "2":
+                    answerContent=createType2HTML(index);
+                    break;
+                case "3":
+                    answerContent=createType3HTML(index);
+                    break;
+                case "4":
+                    answerContent=createType4HTML(index);
+                    break;
+                case "5":
+                    answerContent=createType5HTML(index);
+                    break;
+            }
+            return answerContent;
+        }
+
+    </script>
 
     <script>
-        // createMainContentElementByType(rsiList.rsi_type, research, rsiList, userName, userRole)
+        // createReadMainContentElementByType(currentRsiNo,rsiList[currentRsiNo].rsi_question , rsiList[currentRsiNo].rsi_type)
     </script>
 </div>
 </body>
